Fix gjs_value_to_g_value_internal() for uninitialized enum types

g_type_class_peek() will fail if the type's class has never been
referenced before (and we'll fail with an unhelpful error message).
So use g_type_class_ref() instead, which will intialize the class
structure if necessary.

https://bugzilla.gnome.org/show_bug.cgi?id=704902